catalog spacing fix

--- a/src/assets/styling/_catalog.scss
+++ b/src/assets/styling/_catalog.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 12px;
     max-width: 1000px;
-    padding: 0px 20px;
+    // padding: 0px 20px;
     margin: auto;
 }
 
